5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4359/executions/1577_1332.log
== TEST (2019-04-11 18:37:56) 
-- CODE:
aresta =
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:52:20) 
-- CODE:
aresta = A= 2,59807621135a**2
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta = A= 2,59807621135a**2
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:52:46) 
-- CODE:
aresta = A= 2,59807621135a**2
area = 
 
print(round(x, n))
-- ERROR:
File "XXXX", line 1
    aresta = A= 2,59807621135a**2
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:53:09) 
-- CODE:
aresta = 2,59807621135a**2
print(round(x, n))
-- ERROR:
File "XXXX", line 1
    aresta = 2,59807621135a**2
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:53:38) 
-- CODE:
aresta = 2,59807621135a**2
print(round(x, n))
-- ERROR:
File "XXXX", line 1
    aresta = 2,59807621135a**2
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:25:31) 
-- CODE:
área = 2,59807621135a**2
print(round(x, n))
-- ERROR:
File "XXXX", line 1
    área = 2,59807621135a**2
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:28:08) 
-- CODE:
areasta = 2
print(area.round(x, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(area.round(x, n))
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:28:22) 
-- CODE:
areasta = 2
print(aresta)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(aresta)
NameError: name 'aresta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:28:44) 
-- CODE:
aresta = 2
print(aresta)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:29:20) 
-- CODE:
aresta = 2,59807621135
print(aresta)
-- OUTPUT:
(2, 59807621135)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:35:43) 
-- CODE:
aresta = 2,59807621135
print(aresta)
-- EXECUTION TIME:
0.227469
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
(2, 59807621135)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:36:10) 
-- CODE:
aresta = 2,59807621135a**2
print(aresta)
-- ERROR:
File "XXXX", line 1
    aresta = 2,59807621135a**2
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:37:46) 
-- CODE:
aresta = 5, 19615242270
print(aresta)
-- OUTPUT:
(5, 19615242270)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:37:49) 
-- CODE:
aresta = 5, 19615242270
print(aresta)
-- EXECUTION TIME:
0.160092
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
(5, 19615242270)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:38:09) 
-- CODE:
aresta = 5, 19615242270
print(aresta(x, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(aresta(x, n))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:39:40) 
-- CODE:
aresta = 5, 19615242270
print(aresta)
-- OUTPUT:
(5, 19615242270)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:40:05) 
-- CODE:
aresta = 5,19615242270
print(aresta.float)
-- EXECUTION TIME:
0.154379
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1332/main.py", line 2, in <module>
    print(aresta.float)
AttributeError: 'tuple' object has no attribute 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:40:07) 
-- CODE:
aresta = 5,19615242270
print(aresta.float)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(aresta.float)
AttributeError: 'tuple' object has no attribute 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:41:17) 
-- CODE:
aresta = 5,19615242270
print(float.aresta)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float.aresta)
AttributeError: type object 'float' has no attribute 'aresta'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:41:29) 
-- CODE:
aresta = 5,19615242270
print(float(aresta)
-- ERROR:
File "XXXX", line 3
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:41:38) 
-- CODE:
aresta = 5,19615242270
print(float(aresta))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float(aresta))
TypeError: float() argument must be a string or a number, not 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:42:00) 
-- CODE:
aresta = 5,19615242270
print(float aresta)
-- ERROR:
File "XXXX", line 2
    print(float aresta)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:42:29) 
-- CODE:
aresta = 5.19615242270
print(float aresta)
-- ERROR:
File "XXXX", line 2
    print(float aresta)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:42:41) 
-- CODE:
aresta = 5.19615242270
print(float (aresta))
-- OUTPUT:
5.1961524227
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:42:49) 
-- CODE:
aresta = 5.19615242270
print(float(aresta))
-- EXECUTION TIME:
0.150271
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.1961524227
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:42:50) 
-- CODE:
aresta = 5.19615242270
print(float(aresta))
-- OUTPUT:
5.1961524227
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:42:52) 
-- CODE:
aresta = 5.19615242270
print(float(aresta))
-- EXECUTION TIME:
0.153385
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.1961524227
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:43:07) 
-- CODE:
aresta = 5.19615242270
print(float(aresta))
-- OUTPUT:
5.1961524227
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:43:47) 
-- CODE:
aresta = 5.19615242270
print(riund(aresta))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(riund(aresta))
NameError: name 'riund' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:43:56) 
-- CODE:
aresta = 5.19615242270
print(round(aresta))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:44:00) 
-- CODE:
aresta = 5.19615242270
print(round(aresta))
-- EXECUTION TIME:
0.192422
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:44:40) 
-- CODE:
aresta = 5.19615242270
print(round(aresta))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:46:20) 
-- CODE:
aresta = 5.19615242270
print(input(aresta))
-- OUTPUT:
5.1961524227xxx
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:46:24) 
-- CODE:
aresta = 5.19615242270
print(input(aresta))
-- EXECUTION TIME:
0.236844
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.1961524227xxx
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:46:41) 
-- CODE:
aresta = 5.19615242270
print(round(aresta))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:13:42) 
-- CODE:
 x = 5.19615242270
print(round(x, 4))
-- ERROR:
File "XXXX", line 1
    x = 5.19615242270
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:13:58) 
-- CODE:
x = 5.19615242270
print(round(x, 4))
-- OUTPUT:
5.1962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:14:01) 
-- CODE:
x = 5.19615242270
print(round(x, 4))
-- EXECUTION TIME:
0.151743
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.1962
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:14:17) 
-- CODE:
x = 5.19615242270
print(round(x, 4))
-- OUTPUT:
5.1962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:19:57) 
-- CODE:
x = A = 3/2*3**
print(round(x, 4))
-- ERROR:
File "XXXX", line 1
    x = A = 3/2*3**
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:21:58) 
-- CODE:
x = 3/2*1.73205080756
print(round(x, 4))
-- OUTPUT:
2.5981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:22:04) 
-- CODE:
x = 3/2*1.73205080756
print(round(x, 4))
-- EXECUTION TIME:
0.247857
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.5981
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:23:50) 
-- CODE:
x = 3/2*1.73205080756a**2
print(round(x, 4))
-- ERROR:
File "XXXX", line 1
    x = 3/2*1.73205080756a**2
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:23:53) 
-- CODE:
x = 3/2*1.73205080756a**2
print(round(x, 4))
-- EXECUTION TIME:
0.160554
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 1
    x = 3/2*1.73205080756a**2
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:24:39) 
-- CODE:
x = 3/2*3.46410161513
print(round(x, 4))
-- OUTPUT:
5.1962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:24:49) 
-- CODE:
x = 3/2*3.46410161513
print(round(x, 4))
-- EXECUTION TIME:
0.23503
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.1962
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:26:11) 
-- CODE:
x = 3/2*3.46410161513
print(round(x, 4))
-- OUTPUT:
5.1962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:26:31) 
-- CODE:
x = 3/2*3.46410161513
print(round(x, 4))
-- EXECUTION TIME:
0.204879
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.1962
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:26:33) 
-- CODE:
x = 3/2*3.46410161513
print(round(x, 4))
-- OUTPUT:
5.1962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:28:06) 
-- CODE:
sqrt(3)
print(round(x, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    sqrt(3)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:28:27) 
-- CODE:
x = 3/2*3.46410161513
print(round(x, 4))
-- EXECUTION TIME:
0.157416
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.1962
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:28:29) 
-- CODE:
x = 3/2*3.46410161513
print(round(x, 4))
-- OUTPUT:
5.1962
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
